@@ -63,6 +63,7 @@ Blockly.DOMOTICZ_LOGIC_TIMEVALUE_TOOLTIP = 'Enter a valid time in 24 hour format
 Blockly.DOMOTICZ_LOGIC_WEEKDAY_TOOLTIP = 'Use this block in an IF statement to check the day of the week.';
 Blockly.DOMOTICZ_LOGIC_SUNRISESUNSET_TOOLTIP = 'Use this block to check against sunrise/sunset time as specified in the Domoticz preferences.';
 Blockly.DOMOTICZ_LOGIC_NOTIFICATION_TOOLTIP = 'Use this block in a DO statement to send a notification based on the IF statement. Use text blocks from this group to specify subject and message.\nDepending on the preferences setting the message will go to either email or notification service or both.';     
+Blockly.DOMOTICZ_LOGIC_EMAIL_TOOLTIP = 'Use this block in a DO statement to send a email based on the IF statement. Use text blocks from this group to specify subject, message and to fields.';     
 Blockly.DOMOTICZ_LOGIC_NOTIFICATION_PRIORITY_TOOLTIP = 'Use this block in a DO statement to set the priority of a notificatio.';     
 Blockly.DOMOTICZ_SECURITY_STATUS_TOOLTIP = 'The current state of the Domoticz security system. Can only be checked, not set through an event.';
 Blockly.DOMOTICZ_LOGIC_OPENURL_TOOLTIP = 'Enter a url to open. This does not actually retrieve anything from the url, use it to trigger an external api.';
